http://bugzilla.zimbra.com/show_bug.cgi?id=11986 bug 11986 fix misaligned checkboxes on Features step in New Accoutn wiz

--- a/Ajax/WebRoot/js/config/style/dwt.css
+++ b/Ajax/WebRoot/js/config/style/dwt.css
@@ -914,7 +914,7 @@
 .xform_select_container,
 .xform_output_container
 {
-	padding:2px;
+	
 }
 
 
