--- a/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
+++ b/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
@@ -593,3 +593,7 @@ P, TD, DIV, SPAN, SELECT, INPUT, TEXTAREA, BUTTON {
 	margin-left:10px;
 	margin-right:20px;
 }
+
+.ZaOverride {
+	background-color:#FFF6BF;
+}
